# TLS-Piped

./: README.md
TLS/: .gitignore  CMakeLists.txt  install.sh  requirements.txt
TLS/Fiji.app/: ImageJ2.desktop
TLS/Fiji_Macros/: SRM.ijm
TLS/Projects/: VTK.cmake
TLS/Segmentation-application/: __init__.py
TLS/Segmentation-application/Application/: .Segmentation.py.swp  Application.py  Extract_Trachea.py  Filters.py  Metrics.py  Segmentation.py  UsefullFunctions.py  __init__.py  file_utils.py  lung_damage_quantification.py
TLS/Segmentation_Modules/Lungs_Segmentation/: CMakeLists.txt
TLS/Segmentation_Modules/Lungs_Segmentation/airways/: CMakeLists.txt  SecondPassFM.cxx  SegmentAirwayTree_FM.cxx  itkTreeSegmentationImageFilter.h  itkTreeSegmentationImageFilter.txx
TLS/Segmentation_Modules/Lungs_Segmentation/lungs/: CMakeLists.txt  choose_lungs_main_copy.cxx  choose_lungsv2.cxx  hu_threshold_main.cxx  label_filter.cxx  labelize_main.cxx  test_centroid.cxx
TLS/Segmentation_Modules/Lungs_Segmentation/rib_cage/: generate_pdf_tf.py  rib_cage.py
TLS/Segmentation_Modules/libs/: CMakeLists.txt  dicom_utilities.cxx  dicom_utilities.h
TLS/Segmentation_Modules/utilities/: CMakeLists.txt  create_masks.cxx  find_trachea.cxx
